[package]
name = "korome"
version = "0.12.2"
authors = ["LFalch <lucas@wasd.dk>"]
description="WIP game engine using glium"
documentation="http://lfalch.github.io/korome/korome/"
repository="https://github.com/LFalch/korome"
homepage="https://github.com/LFalch/korome"
readme="README.md"
keywords=["gamedev"]
license="Apache-2.0"
exclude = [
    "Makefile",
    ".gitignore",
    "README.md",
    ".travis.yml",
    "appveyor.yml"
]

[dependencies]
glium = "0.15"
quick-error = "~1"
simple-vector2d = "0.1"

[dependencies.image]
version = "0.10"
default-features = false
features = ["png_codec"]
